--- a/App.Admin/Web.config
+++ b/App.Admin/Web.config
@@ -55,11 +55,11 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v13.0" />
+        <parameter value="Projectsv13.0" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v13.0;Initial Catalog=AppDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=AppDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
