--- a/App.Admin/Web.config
+++ b/App.Admin/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="AppDBContainer" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=AppDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -15,7 +18,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <runtime>
@@ -55,11 +62,8 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="Projectsv13.0" />
+        <parameter value="v13.0" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=AppDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
 </configuration>
