--- a/App.Admin/App.Admin.csproj
+++ b/App.Admin/App.Admin.csproj
@@ -464,6 +464,9 @@
     <Content Include="Scripts\jquery-1.7.2.min.js" />
     <Content Include="Scripts\jquery.easyui-1.3.0.js" />
     <Content Include="Scripts\jquery.easyui-1.3.0.min.js" />
+    <Content Include="Scripts\jquery.easyui.plus.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -502,6 +505,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\SysSample\Create.cshtml" />
+    <Content Include="Views\SysSample\Edit.cshtml" />
+    <Content Include="Views\SysSample\Details.cshtml" />
+    <Content Include="Views\Shared\_Index_LayoutEdit.cshtml" />
     <None Include="Views\SysSample\Index.cshtml" />
     <Content Include="Views\Shared\_Index_Layout.cshtml" />
   </ItemGroup>
@@ -520,6 +527,10 @@
     <ProjectReference Include="..\App.BLL\App.BLL.csproj">
       <Project>{c4ab29a7-2e1f-4cb7-890c-79b5d4cff5d9}</Project>
       <Name>App.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\App.Common\App.Common.csproj">
+      <Project>{37a91b49-f230-4361-a860-6e3a16a6412b}</Project>
+      <Name>App.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\App.Core\App.Core.csproj">
       <Project>{83469E07-E7D3-4750-A8C0-16696794AEF7}</Project>
