--- a/App.IDAL/App.IDAL.csproj
+++ b/App.IDAL/App.IDAL.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISysExceptionRepository.cs" />
+    <Compile Include="ISysLogRepository.cs" />
     <Compile Include="IHomeRepository.cs" />
     <Compile Include="ISysSampleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
