--- a/App.Admin/Web.config
+++ b/App.Admin/Web.config
@@ -24,6 +24,9 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
+    <!--<authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" />
+    </authentication>-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
