--- a/App.DAL/App.config
+++ b/App.DAL/App.config
@@ -11,4 +11,9 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <compilation debug="true" targetFramework="4.5">
+    <assemblies>
+      <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    </assemblies>
+  </compilation>
 </configuration>
