--- a/App.Models/App.Config
+++ b/App.Models/App.Config
@@ -14,4 +14,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <assemblies>
+    <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  </assemblies>
 </configuration>
