--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -64,6 +64,12 @@
       <DependentUpon>AppDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SysException.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SysLog.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="SysModule.cs">
       <DependentUpon>AppDB.tt</DependentUpon>
     </Compile>
@@ -71,6 +77,8 @@
       <DependentUpon>AppDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Sys\AccountModel.cs" />
+    <Compile Include="Sys\SysExceptionModel.cs" />
+    <Compile Include="Sys\SysLogModel.cs" />
     <Compile Include="Sys\SysSampleModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +106,8 @@
       <DependentUpon>AppDB.edmx</DependentUpon>
     </Content>
     <Content Include="Sqls\InitialSysModule.sql" />
+    <Content Include="Sqls\SysException.sql" />
+    <Content Include="Sqls\SysLog.sql" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
