--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,6 +78,7 @@
       <DependentUpon>AppDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Sys\AccountModel.cs" />
+    <Compile Include="Sys\BaseException.cs" />
     <Compile Include="Sys\SysExceptionModel.cs" />
     <Compile Include="Sys\SysLogModel.cs" />
     <Compile Include="Sys\SysSampleModel.cs" />
