fix some ui or other bugs for optimization

--- a/App.BLL/App.BLL.csproj
+++ b/App.BLL/App.BLL.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseBLL.cs" />
     <Compile Include="Core\ExceptionHandler.cs" />
     <Compile Include="SysExceptionBLL.cs" />
     <Compile Include="SysLogBLL.cs" />
