login app with validation 1.fix a bug that fails with using ashx validation

--- a/App.DAL/App.DAL.csproj
+++ b/App.DAL/App.DAL.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountRepository.cs" />
     <Compile Include="SysExceptionRepository.cs" />
     <Compile Include="SysLogRepository.cs" />
     <Compile Include="HomeRepository.cs" />
