--- a/App.Admin/App.Admin.csproj
+++ b/App.Admin/App.Admin.csproj
@@ -153,7 +153,10 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Core\ExtendMvcHtml.cs" />
     <Compile Include="Core\LogHandler.cs" />
-    <Compile Include="Core\VerifyCode.ashx.cs" />
+    <None Include="Core\VerifyCodeHandler.ashx" />
+    <Compile Include="Core\VerifyCodeHandler.ashx.cs">
+      <DependentUpon>VerifyCodeHandler.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
