--- a/App.BLL/App.BLL.csproj
+++ b/App.BLL/App.BLL.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="BaseBLL.cs" />
     <Compile Include="Core\ExceptionHandler.cs" />
+    <Compile Include="AccountBLL.cs" />
     <Compile Include="SysExceptionBLL.cs" />
     <Compile Include="SysLogBLL.cs" />
     <Compile Include="HomeBLL.cs" />
