--- a/App.Common/App.Common.csproj
+++ b/App.Common/App.Common.csproj
@@ -45,11 +45,13 @@
   <ItemGroup>
     <Compile Include="GridPager.cs" />
     <Compile Include="JsonHandler.cs" />
+    <Compile Include="LinqHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultHelper.cs" />
     <Compile Include="Suggestion.cs" />
     <Compile Include="ToJsonResult.cs" />
     <Compile Include="ValidationError.cs" />
+    <Compile Include="ValueConvert.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
