--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>AppDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SysRoleSysUserConfigurationMapping.cs" />
     <Compile Include="SysException.cs">
       <DependentUpon>AppDB.tt</DependentUpon>
     </Compile>
