fix db first/model first bugs 1.update model from database web.config/app.config error 2.the solution always uses web.config connectionString

--- a/App.Admin/App.Admin.csproj
+++ b/App.Admin/App.Admin.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Core\ExtendMvcHtml.cs" />
     <Compile Include="Core\LogHandler.cs" />
     <None Include="Core\VerifyCodeHandler.ashx" />
+    <Compile Include="Core\SupportFilterAttribute.cs" />
     <Compile Include="Core\VerifyCodeHandler.ashx.cs">
       <DependentUpon>VerifyCodeHandler.ashx</DependentUpon>
     </Compile>
