--- a/App.DAL/App.DAL.csproj
+++ b/App.DAL/App.DAL.csproj
@@ -50,6 +50,8 @@
     <Compile Include="SysExceptionRepository.cs" />
     <Compile Include="SysLogRepository.cs" />
     <Compile Include="HomeRepository.cs" />
+    <Compile Include="SysModuleOperateRepository.cs" />
+    <Compile Include="SysModuleRepository.cs" />
     <Compile Include="SysRightRepository.cs" />
     <Compile Include="SysSampleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
