--- a/App.BLL/App.BLL.csproj
+++ b/App.BLL/App.BLL.csproj
@@ -73,6 +73,8 @@
     <Compile Include="SysExceptionBLL.cs" />
     <Compile Include="SysLogBLL.cs" />
     <Compile Include="HomeBLL.cs" />
+    <Compile Include="SysModuleOperateBLL.cs" />
+    <Compile Include="SysModuleBLL.cs" />
     <Compile Include="SysSampleBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysUserBLL.cs" />
