--- a/App.IDAL/App.IDAL.csproj
+++ b/App.IDAL/App.IDAL.csproj
@@ -44,6 +44,8 @@
     <Compile Include="ISysExceptionRepository.cs" />
     <Compile Include="ISysLogRepository.cs" />
     <Compile Include="IHomeRepository.cs" />
+    <Compile Include="ISysModuleOperateRepository.cs" />
+    <Compile Include="ISysModuleRepository.cs" />
     <Compile Include="ISysRightRepository.cs" />
     <Compile Include="ISysSampleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
