--- a/App.BLL/App.BLL.csproj
+++ b/App.BLL/App.BLL.csproj
@@ -75,6 +75,7 @@
     <Compile Include="HomeBLL.cs" />
     <Compile Include="SysModuleOperateBLL.cs" />
     <Compile Include="SysModuleBLL.cs" />
+    <Compile Include="SysRoleBLL.cs" />
     <Compile Include="SysSampleBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysUserBLL.cs" />
