--- a/App.IDAL/App.IDAL.csproj
+++ b/App.IDAL/App.IDAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ISysModuleOperateRepository.cs" />
     <Compile Include="ISysModuleRepository.cs" />
     <Compile Include="ISysRightRepository.cs" />
+    <Compile Include="ISysRoleRepository.cs" />
     <Compile Include="ISysSampleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
