--- a/App.IDAL/App.IDAL.csproj
+++ b/App.IDAL/App.IDAL.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ISysRightRepository.cs" />
     <Compile Include="ISysRoleRepository.cs" />
     <Compile Include="ISysSampleRepository.cs" />
+    <Compile Include="ISysUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
