--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -65,9 +68,23 @@
       <DependentUpon>AppDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Sqls\10.UpdateSysRightRightFlag.sql" />
+    <Content Include="Sqls\11.getSysRoleByUserId-UpdateSysRoleSysUser.sql" />
     <Content Include="Sqls\7.clearUsedRightOperate.sql" />
     <Content Include="Sqls\8.storeProcedureWithGetUserRight.sql" />
+    <Compile Include="P_Sys_GetRightByRoleAndModule_Result.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="P_Sys_GetRightOperate_Result.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
+    <Content Include="Sqls\9.GetRightByRoleAndModule.sql">
+      <SubType>Component</SubType>
+    </Content>
+    <Compile Include="P_Sys_GetRoleByUserId_Result.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="P_Sys_GetUserByRoleId_Result.cs">
       <DependentUpon>AppDB.tt</DependentUpon>
     </Compile>
     <Compile Include="SysException.cs">
@@ -98,6 +115,8 @@
     <Compile Include="SysUser.cs">
       <DependentUpon>AppDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Sys\SysRightModelByRoleAndModuleModel.cs" />
+    <Compile Include="Sys\SysRightOperateModel.cs" />
     <Compile Include="Sys\SysUserModel.cs" />
     <Compile Include="Sys\AccountModel.cs" />
     <Compile Include="Sys\BaseException.cs" />
@@ -108,6 +127,7 @@
     <Compile Include="Sys\SysModuleOperateModel.cs" />
     <Compile Include="Sys\SysRoleModel.cs" />
     <Compile Include="Sys\SysSampleModel.cs" />
+    <Content Include="Sqls\allotUserByRole.sql" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="AppDB.edmx">
@@ -142,6 +162,11 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SQLDBExtensionsRefPath)\Microsoft.Data.Tools.Schema.Sql.UnitTesting.targets" Condition="'$(SQLDBExtensionsRefPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\SSDT\Microsoft.Data.Tools.Schema.Sql.UnitTesting.targets" Condition="'$(SQLDBExtensionsRefPath)' == ''" />
+  <PropertyGroup>
+    <SsdtUnitTestVersion>2.0</SsdtUnitTestVersion>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
