--- a/App.Admin/Web.config
+++ b/App.Admin/Web.config
@@ -24,10 +24,18 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
+    <!--<httpModules>
+      <add name="CultureAwareHttpModule" type="App.Admin.Core.CultureAwareHttpModule,App.Admin.Core"/>
+    </httpModules>-->
     <!--<authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>-->
   </system.web>
+  <system.webServer>
+    <modules>
+      <add name="CultureAwareHttpModule" type="App.Admin.Core.CultureAwareHttpModule,App.Admin"/>
+    </modules>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
