--- a/App.Admin/Web.config
+++ b/App.Admin/Web.config
@@ -9,10 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AppDBContainer" connectionString="metadata=res://*/AppDB.csdl|res://*/AppDB.ssdl|res://*/AppDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=AppDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="AppDBConnectionString" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=AppDB;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="AppDBContainer" connectionString="metadata=res://*/AppDB.csdl|res://*/AppDB.ssdl|res://*/AppDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=AppDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AppDBConnectionString" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=AppDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,7 +22,7 @@
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      </assemblies>
+    </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <!--<httpModules>
@@ -36,7 +34,7 @@
   </system.web>
   <system.webServer>
     <modules>
-      <add name="CultureAwareHttpModule" type="App.Admin.Core.CultureAwareHttpModule,App.Admin"/>
+      <add name="CultureAwareHttpModule" type="App.Admin.Core.CultureAwareHttpModule,App.Admin" />
     </modules>
   </system.webServer>
   <runtime>
