--- a/App.Admin/Web.config
+++ b/App.Admin/Web.config
@@ -33,7 +33,7 @@
     </authentication>-->
   </system.web>
   <system.webServer>
-    <modules>
+    <modules  runAllManagedModulesForAllRequests="true">
       <add name="CultureAwareHttpModule" type="App.Admin.Core.CultureAwareHttpModule,App.Admin" />
     </modules>
   </system.webServer>
