--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -71,9 +71,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppDB.edmx</DependentUpon>
     </Compile>
+    <Compile Include="MIS\MIS_ArticleModel.cs" />
+    <Compile Include="MIS\MIS_Article_CategoryModel.cs" />
+    <Compile Include="MIS_Article.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MIS_Article_Category.cs">
+      <DependentUpon>AppDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Sqls\10.UpdateSysRightRightFlag.sql" />
     <Content Include="Sqls\11.getSysRoleByUserId-UpdateSysRoleSysUser.sql" />
+    <Content Include="Sqls\12.InitialMIS.sql" />
     <Content Include="Sqls\7.clearUsedRightOperate.sql" />
     <Content Include="Sqls\8.storeProcedureWithGetUserRight.sql" />
     <Compile Include="P_Sys_GetRightByRoleAndModule_Result.cs">
@@ -171,6 +180,7 @@
       <Name>App.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SQLDBExtensionsRefPath)\Microsoft.Data.Tools.Schema.Sql.UnitTesting.targets" Condition="'$(SQLDBExtensionsRefPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\SSDT\Microsoft.Data.Tools.Schema.Sql.UnitTesting.targets" Condition="'$(SQLDBExtensionsRefPath)' == ''" />
